tests/invalid/Template_Invalid_34.whiley
method m<T>(&T p, T x):
    *p = x